tests/ui/async-await/large_moves.attribute.stderr
error: moving 10024 bytes
  --> $DIR/large_moves.rs:12:13
   |
LL |       let x = async {
   |  _____________^
LL | |         let y = [0; 9999];
LL | |         dbg!(y);
LL | |         thing(&y).await;
LL | |         dbg!(y);
LL | |     };
   | |_____^ value moved from here
   |
   = note: The current maximum size is 1000, but it can be customized with the move_size_limit attribute: `#![move_size_limit = "..."]`
note: the lint level is defined here
  --> $DIR/large_moves.rs:1:9
   |
LL | #![deny(large_assignments)]
   |         ^^^^^^^^^^^^^^^^^

error: moving 10024 bytes
  --> $DIR/large_moves.rs:18:14
   |
LL |     let z = (x, 42);
   |              ^ value moved from here
   |
   = note: The current maximum size is 1000, but it can be customized with the move_size_limit attribute: `#![move_size_limit = "..."]`

error: moving 10024 bytes
  --> $DIR/large_moves.rs:18:13
   |
LL |     let z = (x, 42);
   |             ^^^^^^^ value moved from here
   |
   = note: The current maximum size is 1000, but it can be customized with the move_size_limit attribute: `#![move_size_limit = "..."]`

error: moving 10024 bytes
  --> $DIR/large_moves.rs:20:13
   |
LL |     let a = z.0;
   |             ^^^ value moved from here
   |
   = note: The current maximum size is 1000, but it can be customized with the move_size_limit attribute: `#![move_size_limit = "..."]`

error: aborting due to 4 previous errors

